# agent-gate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  permissions.example.yaml  pyproject.toml
.claude/: settings.json
docs/: 0-spec.md  1-architecture.md
specs/: 2026-02-08-core-engine.md  2026-02-09-extensible-tools.md  2026-02-09-gateway-server.md  2026-02-09-sdk-packaging.md  core-engine.md  gateway-server.md  sdk-packaging.md
src/agent_gate/: __init__.py  __main__.py  client.py  config.py  db.py  engine.py  executor.py  models.py  server.py
src/agent_gate/messenger/: base.py  telegram.py
src/agent_gate/services/: homeassistant.py
src/agentpass/: __init__.py  __main__.py  cli.py  client.py  config.py  db.py  engine.py  executor.py  models.py  registry.py  server.py
src/agentpass/messenger/: telegram.py
src/agentpass/services/: base.py  http.py
tests/: test_cli.py  test_client.py  test_config.py  test_db.py  test_engine.py  test_executor.py  test_exports.py  test_homeassistant.py  test_http_service.py  test_integration.py  test_main.py  test_messenger_base.py  test_models.py  test_plugin.py  test_registry.py  test_server.py  test_telegram.py  test_tool_loading.py
tools/: homeassistant.yaml
